-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.2.0
-
None
-
Lustre 2.1.51
Centos 6.0
Kernel-2.6.32_131.2.1.el6.x86_64
-
3
-
4765
WARNING: /home/build/kernel/rpmbuild/BUILD/lustre-2.1.51/lustre/ptlrpc/ptlrpc.o(.init.text+0x32a): Section mismatch in reference from the function ptlrpc_init() to the function .exit.text:ldlm_exit()
The function __init ptlrpc_init() references
a function __exit ldlm_exit().
This is often seen when error handling in the init function
uses functionality in the exit path.
The fix is often to remove the __exit annotation of
ldlm_exit() so it may be used outside an exit section.
WARNING: /home/build/kernel/rpmbuild/BUILD/lustre-2.1.51/lustre/ptlrpc/ptlrpc.o(.init.text+0x6c8): Section mismatch in reference from the function ptlrpc_init() to the function .exit.text:sptlrpc_fini()
The function __init ptlrpc_init() references
a function __exit sptlrpc_fini().
This is often seen when error handling in the init function
uses functionality in the exit path.
The fix is often to remove the __exit annotation of
sptlrpc_fini() so it may be used outside an exit section.
/home/build/kernel/rpmbuild/BUILD/lustre-2.1.51/lustre/ptlrpc/gss/gss_svc_upcall.c:475: error: unknown field 'cache_request' specified in initializer
cc1: warnings being treated as errors
/home/build/kernel/rpmbuild/BUILD/lustre-2.1.51/lustre/ptlrpc/gss/gss_svc_upcall.c:475: error: initialization from incompatible pointer type
make[9]: *** [/home/build/kernel/rpmbuild/BUILD/lustre-2.1.51/lustre/ptlrpc/gss/gss_svc_upcall.o] Error 1
make[9]: *** Waiting for unfinished jobs....
make[8]: *** [/home/build/kernel/rpmbuild/BUILD/lustre-2.1.51/lustre/ptlrpc/gss] Error 2
make[7]: *** [/home/build/kernel/rpmbuild/BUILD/lustre-2.1.51/lustre/ptlrpc] Error 2
make[6]: *** [/home/build/kernel/rpmbuild/BUILD/lustre-2.1.51/lustre] Error 2
make[5]: *** [_module_/home/build/kernel/rpmbuild/BUILD/lustre-2.1.51] Error 2
make[5]: Leaving directory `/extra/build/kernel/rpmbuild/BUILD/kernel-2.6.32_131.2.1.el6.x86_64_lustre_2.1.50'
make[4]: *** [modules] Error 2
make[4]: Leaving directory `/extra/build/kernel/rpmbuild/BUILD/lustre-2.1.51'
make[3]: *** [all-recursive] Error 1
make[3]: Leaving directory `/extra/build/kernel/rpmbuild/BUILD/lustre-2.1.51'
make[2]: *** [all] Error 2
make[2]: Leaving directory `/extra/build/kernel/rpmbuild/BUILD/lustre-2.1.51'
error: Bad exit status from /var/tmp/rpm-tmp.Po3hCL (%build)
- duplicates
-
LU-2392 Kerberos support (GSS keyring) is broken due to major structural changes between 2.6.x and 2.6.32
-
- Resolved
-
-
LU-2221 Kerberos support for kernel >= 2.6.24 is broken
-
- Resolved
-
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....