lustre/ptlrpc/ptlrpc_internal.h
@@ -143,8 +143,8 @@ int  sptlrpc_conf_init(void);
 void sptlrpc_conf_fini(void);
 
 /* sec.c */
-int  __init sptlrpc_init(void);
-void __exit sptlrpc_fini(void);
+int  sptlrpc_init(void);
+void sptlrpc_fini(void);
 
 /* recov_thread.c */
 int llog_recov_init(void);
